--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,136 @@
   font-family: 'P2';
   src: url(/font/PressStart2P-Regular.ttf);
 }
+
+body{
+  font-family: 'P2';
+  width: 100%;
+  margin: 0;
+}
+
+.topo-pagina {
+  background-image: linear-gradient(180deg,black,#44523fd8,rgb(243, 235, 235) 50%,#44523fd8,black);
+  margin-top: -50px;
+}
+
+.login-area{
+  float: right;
+  width: 20%;
+  padding-top: 5%;
+}
+
+.email-text {
+  font-size: 12px;
+  margin: 0 0 2% 7%;
+  color: white;
+}
+
+.email {
+  margin: 0 0 2% 7%;
+  border: white 2px solid;
+  border-radius: 30px;
+  background-color: black;
+  color: white;
+
+}
+
+.email::placeholder {
+  color: white;
+}
+
+.senha-text {
+  font-size: 12px;
+  margin: 0 0 2% 7%;
+  color: white;
+}
+
+.senha {
+  margin: 0 0 2% 7%;
+  border: white 2px solid;
+  border-radius: 30px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+.btn-login {
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.795);
+  color: #2cd32c;
+  border: #32cd32 2px solid;
+  margin-left: 35%;
+}
+
+.link-conta {
+  font-size: 10px;
+  font-weight: lighter;
+  font-family: 'P2';
+  text-decoration: none;
+  color: black;
+  margin-left: 18%;
+}
+
+.btn-login:hover {
+  border: #00ff00 2px solid;
+  cursor: pointer;
+}
+
+.link-conta:hover {
+  color: #504b4b;
+  cursor: pointer;
+}
+
+.img-secret {
+  margin-left: 35%;
+  margin-top: 8%;
+  border-radius: 13%;
+  border: #000000 1px solid;
+}
+
+.subtitulo-logo {
+  color: white;
+  margin-left: 33%;
+  padding-bottom: 2%;
+}
+
+.menu {
+  background-color: black;
+  margin-top: -20px;
+  padding-top: 12px;
+  padding-bottom: 17px;
+  text-decoration: none;
+}
+
+.news {
+  margin-left: 23%;
+  padding: 1% 10px;
+  text-decoration: none;
+  color: #00ff00;
+  border: white solid 3px;
+}
+
+
+.quem-somos {
+  margin-left: -5px;
+  padding: 1% 10px;
+  text-decoration: none;
+  color: #00ff00;
+  border: white solid 3px;
+}
+
+
+.aprenda {
+  margin-left: -5px;
+  padding: 1% 10px;
+  text-decoration: none;
+  color: #00ff00;
+  border: white solid 3px;
+}
+
+
+.nossa-causa {
+  margin-left: -5px;
+  padding: 1% 10px;
+  text-decoration: none;
+  color: #00ff00;
+  border: white solid 3px;
+}
