--- a/css/quemSomos.css
+++ b/css/quemSomos.css
@@ -73,7 +73,7 @@ body{
 }
 
 .menu-usuario {
-  margin-left: 3%;
+  margin-left: 19%;
 }
 
 .content{
@@ -138,7 +138,7 @@ background-color: #504b4b;
   padding-right: 4%;
   background-image: url(/img/index.jpeg);
   margin: 0 20% 2% 20%;
-  padding-top: 3%;
+  padding-top: 1%;
 }
 
 .news-section h2{
@@ -149,15 +149,16 @@ background-color: #504b4b;
 .borda {
   margin-bottom: 20px;
   border: black solid 5px;
-  padding: 15px;
+
   background-color: black;
   color: #2cd32c;
-  padding: 10px 10px -40px 10px;
+  padding: 10px 10px 0px 10px;
 }
 
 
 .img-news{
   width: 100%;
+  height: 300px;
   border-radius: 3%;
   border: solid #2cd32c 1px;
 }
@@ -184,42 +185,7 @@ footer{
   color: white;
 }
 
-#divBusca{
-  background-color:#2F4F4F;
-  border:solid 1px;
-  border-radius:15px;
-  width: 99%;
-  height: 30px;
-  border: #00ff00 solid 1px;
-}
-
-#txtBusca{
-  float:left;
-  background-color:transparent;
-  padding-left:5px;
-  font-style:italic;
-  font-size:18px;
-  border:none;
-  height:30px;
-  width:300px;
-  color: #00ff00;
-}
-
-.btn-search{
-  margin-left: 40%;
-  border: #00ff00 solid 2px;
-  padding: 4px 3%;
-  border-radius: 50px;
-}
-
-.paginas a{
-  background-color: #000000;
-  margin: -1% 5px;
-  border: #00ff00 2px solid;
-  padding: 5px;
-  text-decoration: none;
-  color: #00ff00;
-}
-.paginas {
-  margin-left: 9%;
+.frase {
+  font-size: x-small;
+  color: white;
 }
